# repo-generator-backend

./: Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: create.py  router.py
app/core/: config.py  security.py
app/models/: payload_create.py
app/services/: create_repo.py  generate_project.py
consts/: consts.py  paths.py
src/consts/: paths.py
{{ cookiecutter.project_name }}/: pyproject.toml
{{ cookiecutter.project_name }}/config/: config.yaml
{{ cookiecutter.project_name }}/config/experiments/: experiment.yaml
{{ cookiecutter.project_name }}/consts/: consts.py  paths.py
{{ cookiecutter.project_name }}/dataset/: build_dataset.py
