[project]
name = "repo-gen"
version = "0.0.1"
description = "A simple and fast way to create repositories for AI projects"
authors = [{ name = "Erika Sánchez-Femat", email = "epsanchezf@ipn.mx" }]
requires-python = ">=3.8"
readme = "README.md"

# Minimum required dependencies
dependencies = [
    "pandas==1.3.5",
    "numpy==1.22.4",
    "scikit-learn==1.4.1.post1",
    "tqdm==4.62.3",
    "cookiecutter==2.6.0",
    "ipykernel==6.29.3",
    "jupyterlab==4.1.4",
    "matplotlib==3.8.3",
    "pillow==10.2.0",
    "scipy==1.12.0",
]

[project.optional-dependencies]
tests = [
    "pytest==7.2.2"
]
lint = [
    "ruff==0.3.2"
]
dev = []

[build-system]
requires = ["uv>=0.1.14", "setuptools>=69.1.1", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["repo-gen*"]
